--- a/docs/sections/usage.tex
+++ b/docs/sections/usage.tex
@@ -1,7 +1,14 @@
 \section{Usage}
 
 \begin{itemize}
-	\item When the program opens and the start screen is displayed showing the ``Swarm" title. Click anywhere onscreen to begin gameplay.
+	\item When the program opens and the start screen is displayed showing the ``Swarm" title. Click anywhere onscreen to begin gameplay starting with the tutorial.
+	\item When on the title page press \verb!H! on the keyboard view the high scores list.
+	\item When on the title page press \verb!S! to skip the tutorial and begin gameplay.
 	\item When in game the player ball moves towards the location of the mouse pointer.
 	\item Hitting the space bar cycles the colour of the player ball from red to green to blue and then back to red again.
+	\item Colliding with a powerup equips that power up, for that powerups duration.
+	\item You may cheat and skip to the next level at any time by pressing the \verb!S! key whilst playing a leve.
+	\item Pressing Escape whilst playing a level returns to the title screen.
+	\item Pressing Escape whilst viewing the high scores list returns to the title screen.
+	\item Clicking when viewing the high scores screen after dying or completing all of the levels restarts the game at the first non-training level.
 \end{itemize}
