--- a/docs/sections/requirements.tex
+++ b/docs/sections/requirements.tex
@@ -84,7 +84,7 @@
 	\item When the speed power is actually removed, the player ball's colour is returned to the colour it was before picking up this powerup, showing a return to the previous state.
 	\item When the power powerup is active (which attracts all enemy balls, and allows the player to gain points from consuming any colour) a black border is drawn around the player symbolising a toughened shell.
 	\item When the power powerup is less than one second away from being removed, the border colour is changed to become a---slightly ligher than black---dark grey, symbolising the wearing off of the power powerup.
-	\item When actually removed the power powerup's border border is removed.
+	\item When actually removed the power powerup's border is removed.
 \end{itemize}
 
 \subsection{Support different states}
