Added additional notes about the game.

--- a/docs/sections/additional.tex
+++ b/docs/sections/additional.tex
@@ -1,1 +1,17 @@
-\section{Additional}
+\section{Additional Information}
+
+There are 5 training levels which are prefixed with ``intro" in the \verb!levels/! folder. The first teaches that different colours are repelled from the player. The second teaches that similar colours are attracted and that the player should press the space bar to change colour in order to chase them down. The third introduces holes, and entices the player to push the enemy balls into a hole. The forth introduces the power (black) powerup, and the fifth explains the speed (white) powerup.
+
+It may take a long time to complete all 3 of the non-training levels, or at least become laborious during testing of this game. At any point whilst playing a level, press the \verb!S! key to skip to the next level in order to gain access to start the next level, allowing access to higher levels. \\
+
+I would like to bring to the readers attention the iamges used for the wall and hole tiles in the background. These images are located within the \verb!images/! directory and where created from scratch in photoshop using squares and gradient fills. I am particularly pleased with the way putting two vertical tiles (for example) adjacent to each other vertically gives the impression of a solid continuous wall. The overall effect created by a few well though out image is a nice one. \\
+
+The level files located in \verb!level/! use `\verb!\n!' line endings and so these line endings are ignored in Notepad on Windows. The solution is to open them (if you are opening them at all) in an editor which understands \verb!\n! line endings such as WordPad or Notepad++. \\
+
+In the final level (the third of the non-training level) located in \verb!levels/level3.txt! there is a section at the bottom left which cannot be accessed by the player, but contains enemies which must be killed. The only option is to combine the attraction and repelling mechanics of the game to push all of them into a hole within the area. This is a good example of the balance created by the game mechanics. \\
+
+{\bf This game has not been tested on the A32 computers.} It was developed and tested on a 64-bit version of Window 7 using Visual Studio 2008. A full clean and build creates no errors or warnings in my tests. I am not using any advanced libraries such as audio, so I cannot think of any reasons why an error would occur on the Lab computers.
+
+Unfortunately I could not make it into the University in order to test the game on a Lab computer, and hope that if any error does occur due to a difference in the VS2008 project file or OS developed on (for example), that the marker would contact me to enable any non-major problem to be rectified.
+
+Obviously I would not expect you to allow me to rewrite any parts of my code, but if any other errors do arise due to a lack of testing on the lab computers I hope it can be rectified without a score of 0 being awarded, as a lot of time has gone into this game.
