Changed the section numbering style to not start with 0.

--- a/docs/cfjcw.tex
+++ b/docs/cfjcw.tex
@@ -4,6 +4,8 @@
 
 %----------------------------------------------------------------
 
+\def\thesection{\arabic{section}}
+
 \begin{document}
 
 \title{G52CFJ Coursework Documentation}
